assets/scss/pages/index.scss
@import "../library/foundation";

.content-header {
  overflow: hidden;
  position: relative;
  text-align: center;
  background-image: image-url('hero.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  &:after {
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: absolute;
    background-color: transparentize(#000, .4);
    content: " ";
  }
}
.container {
  position: relative;
  z-index: 2
}

.header-caption {
  margin: 0;
  padding-bottom: 80px;
  color: $inverted;
  font-size: 24px;
  line-height: 48px;
  @include susy-breakpoint($bp-large) {
    font-size: 36px;
    line-height: 60px;
  }
}

.section-intro {
  .intro {
    margin-top: 0;
    color: $highlight;
    font-size: 32px;
    + p { margin-bottom: 0; }
  }
}

// Leadership Team
.section-leadership {
  .section-title { margin-top: 0; }
}
.leadership-team--list {
  margin: 0;
  padding: 0;
  list-style: none;
}
.leader {
  margin: 100px 0 0;
  padding: 0;
  list-style: none;
  text-align: left;
}
.leader-meta {
  @include susy-breakpoint($bp-small) {
    display: block;
    text-align: center;
  }
  @include susy-breakpoint($bp-large) {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    text-align: left;
  }
}
.leader-name { display: block; }
.leader-title { display: block; }
.leader-bio {
  color: $alternate-text;
  font-size: 24px;
  line-height: 2;
}
.leader-image {
  max-width: 240px;
  padding: 10px;
  border-radius: 100%;
  border: 4px solid $highlight;
  @include susy-breakpoint($bp-large) {
    margin-right: 40px;
  }
}


$triangle: 40px;
$flattener: 150px;

// Contact form
.section-contact-drawer {
  padding-top: 0;
  position: relative;
  overflow: visible;
  .btn-group {
    margin-bottom: 0;
  }
}

